--- a/requirements.txt
+++ b/requirements.txt
@@ -11,7 +11,7 @@ torchvision>=0.15.0
 numpy==1.23.5
 scipy
 scikit-image>=0.19.3
-opencv-python
+opencv-python-headless
 Pillow
 imagecodecs
 tifffile
