--- a/biomedclip_finetuning/open_clip/requirements.txt
+++ b/biomedclip_finetuning/open_clip/requirements.txt
@@ -1,5 +1,8 @@
-torch>=1.9.0
-torchvision
+--extra-index-url https://download.pytorch.org/whl/cu121
+
+torch==2.2.2+cu121
+torchvision==0.17.2+cu121
+torchaudio==2.2.2+cu121
 regex
 ftfy
 tqdm
